--- a/index.es.qmd
+++ b/index.es.qmd
@@ -18,10 +18,10 @@ about:
       href: mailto:nissimlebovits@proton.me
 ---
 
-Soy un investigador becario Fulbright basado en La Plata, Argentina, donde investigo oportunidades para utilizar imágenes satelitales de código abierto para mejorar los modelos locales de riesgo de inundaciones. Tengo una maestría en planificación urbana de la [Escuela de Diseño Weitzman](https://www.design.upenn.edu/) de la Universidad de Pensilvania, donde me especialicé en planificación ambiental y ciencia de datos geoespaciales.
+Soy becario Fulbright en La Plata, Argentina, donde investigo cómo usar imágenes satelitales y herramientas de código abierto para mejorar el entendimiento local de riesgo de inundaciones. Tengo una maestría en planificación urbana de la [Escuela de Diseño Weitzman](https://www.design.upenn.edu/) de la Universidad de Pensilvania, con especialización en planificación ambiental y ciencia de datos geoespaciales.
 
-Anteriormente, trabajé como asistente de investigación para la [Profesora Allison Lassiter](https://www.design.upenn.edu/people/allison-lassiter). Construimos un modelo de agrupamiento para identificar sistemas públicos vulnerables de agua potable en Estados Unidos, y trabajamos en una simulación de sistema multiagente sobre cómo la intrusión de agua salada podría afectar las redes costeras de suministro de agua potable. Con el [Profesor Matthijs Bouw](https://www.design.upenn.edu/people/matthijs-bouw), también desarrollé modelos de inundación y calor para un proyecto de ONU-Hábitat que ayudará a los planificadores urbanos en el sur global a mitigar los conflictos entre la expansión urbana, las amenazas climáticas y la pérdida de biodiversidad.
+Trabajé como asistente de investigación de la [Profesora Allison Lassiter](https://www.design.upenn.edu/people/allison-lassiter), desarrollando un modelo de clustering para identificar sistemas públicos de agua potable vulnerables en Estados Unidos y una simulación multiagente sobre cómo la intrusión salina afecta las redes costeras de abastecimiento de agua potable. Con el [Profesor Matthijs Bouw](https://www.design.upenn.edu/people/matthijs-bouw) desarrollé modelos de inundación y calor para un proyecto de ONU-Hábitat que ayudará a planificadores urbanos del sur global a mitigar conflictos entre expansión urbana, amenazas climáticas y pérdida de biodiversidad.
 
-Soy fundador de [Clean & Green Philly](https://www.cleanandgreenphilly.org/), una plataforma tecnológica sin fines de lucro y de código abierto que promueve intervenciones basadas en datos en propiedades vacantes para mejorar la calidad de vida en Filadelfia.
+Fundé [Clean & Green Philly](https://www.cleanandgreenphilly.org/), una plataforma tecnológica sin fines de lucro y de código abierto que promueve intervenciones basadas en datos en propiedades vacantes para mejorar la calidad de vida en Filadelfia.
 
-Me interesa utilizar datos para fomentar la participación ciudadana y construir ciudades más sostenibles e inclusivas. Creo en la tecnología de código abierto y el trabajo impulsado por la comunidad. Revisa [mi trabajo](https://nlebovits.github.io/projects.html) para ver en qué he estado trabajando últimamente.
+Me interesa usar datos para fomentar la participación ciudadana y construir ciudades más sostenibles e inclusivas. Creo en la tecnología de código abierto y el trabajo comunitario. Échale un vistazo a [mi trabajo](https://nlebovits.github.io/projects.html) para ver mis proyectos recientes.
